# steamfixes

./: .gitignore  .pylintrc  .travis.yml  README.md  meson.build  setup.py
src/: Makefile  loader.c  steamfixes  test_loader.sh
steamfixes/: __init__.py  fix.py  game.py  logger.py  util.py
steamfixes/gamefixes/: 200710.py
